--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,9 @@
 
 body 
 {
+    margin:0px;
+    padding:0px;
+    
     display: grid;
 
     grid-template-rows   : auto;
@@ -13,15 +16,20 @@ body
 
 header 
 {
+    height: 200px;
 
 }
 
 main 
 {
+    
+    height: 200px;
 
 }
 
 footer
 {
+    
+    height: 200px;
 
 }
