--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,11 +5,11 @@ body
 {
     margin:0px;
     padding:0px;
-    
+
     display: grid;
 
-    grid-template-rows   : auto;
-    grid-template-columns: auto auto auto;
+    grid-template-rows   : auto auto auto;
+    grid-template-columns: auto;
     
     grid-gap: 16px;
 }
