--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,24 +12,27 @@ body
     grid-template-columns: auto;
     
     grid-gap: 16px;
+
+    width: 100%;
+    height: 100%;
 }
 
 header 
 {
-    height: 200px;
+    height: 75px;
 
 }
 
 main 
 {
     
-    height: 200px;
+    
 
 }
 
 footer
 {
-    
     height: 200px;
+    
 
 }
