--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,13 +25,21 @@ header
 
 header ul
 {
-    
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
 }
 
 header ul a
 {
     text-decoration: none;
     color: black;
+}
+
+header ul a li
+{
+    display: block;
+
 }
 
 main 
