--- a/scss/status.scss
+++ b/scss/status.scss
@@ -1,10 +1,4 @@
-%no-select
-{
-  -webkit-user-select: none;  /* Chrome all / Safari all */
-  -moz-user-select: none;     /* Firefox all */
-  -ms-user-select: none;      /* IE 10+ */
-  user-select: none;          /* Likely future */    
-}
+@import './templates/generic.scss';
 
 //
 body
@@ -68,7 +62,7 @@ footer
 
 .error-message-redirect
 {
-    @extend %no-select;
+    @extend %not-selecteble;
     position: relative;
 
     width: 50%;
