--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
 // 
-@import './containers.scss';
-@import './generic.scss';
+@import './templates/containers.scss';
+@import './templates/generic.scss';
 
 body 
 {
