--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,6 +27,9 @@ header
 header ul
 {
     @extend %not-selecteble;
+
+    font-family: 'Open sans';
+
     display: flex;
     list-style: none;
     
