--- a/scss/style.scss
+++ b/scss/style.scss
@@ -42,8 +42,14 @@ header ul
 
 header ul a
 {
-    text-decoration: none;
-    color: black;
+    @extend %rest;
+    
+}
+
+header ul a:hover
+{
+    @extend %activate;
+
 }
 
 header ul a li
